[project]
name = "google-maps-a2a"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "httpx==0.25.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
