[project]
name = "google-maps-a2a"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]>=1.0.3",
    "uvicorn>=0.23.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.3.0",
    "google-adk>=1.7.0,<2.0.0",
    "google-genai>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=main --cov=agent --cov=agent_executor"
